Fix .venv clashing

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,12 +6,12 @@ ARG PROJECT=api
 RUN groupadd --gid 1000 user &&  adduser --disabled-password --gecos '' --uid 1000 --gid 1000 user
 USER user
 
-WORKDIR /home/user/$PROJECT/
+WORKDIR /home/user
 
 # Install Poetry.
 RUN --mount=type=cache,target=/root/.cache pip install --user poetry==1.2.0
 ENV \
-    PATH="/home/user/.local/bin:/home/user/${PROJECT}/.venv/bin:${PATH}" \
+    PATH="/home/user/.local/bin:/home/user/.venv/bin:${PATH}" \
     PYTHONUNBUFFERED=1 \
     POETRY_NO_INTERACTION=1 \
     POETRY_VIRTUALENVS_IN_PROJECT=true
@@ -21,6 +21,8 @@ COPY --chown=user:user ./poetry.lock ./
 
 
 FROM base as dev
+
+WORKDIR /home/user/$PROJECT
 RUN --mount=type=cache,target=/root/.cache poetry install
 COPY --chown=user:user ./$PROJECT /home/user/$PROJECT
 
