--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,24 @@ optional = true
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
+black = "^22.10.0"
+isort = "^5.10.1"
+mypy = "^0.982"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line_length = 120
+
+[tool.isort]
+line_length = 120
+profile = "black"
+known_first_party = ["api", "infrastructure", "domain"]
+
+[tool.mypy]
+plugins = "sqlalchemy.ext.mypy.plugin"
+ignore_missing_imports = true
+exclude = [".venv"]
 
