--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,20 +14,21 @@ keywords = ["FastAPI", "Template"]
 [tool.poetry.dependencies]
 python = "^3.8"
 requests = "^2.31.0"
-fastapi = "^0.85.1"
+fastapi = "^0.108.0"
 uvicorn = "^0.18.3"
 SQLAlchemy = "^1.4.42"
 alembic = "^1.8.1"
-psycopg2-binary = "^2.9.4"
+psycopg2-binary = "^2.9.9"
+httpx = "^0.26.0"
 
 [tool.poetry.group.dev]
 optional = true
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.1.3"
-black = "^22.10.0"
-isort = "^5.10.1"
-mypy = "^0.982"
+pytest = "^7.4.4"
+black = "^23.12.1"
+isort = "^5.13.2"
+mypy = "^1.8.0"
 
 [build-system]
 requires = ["poetry-core"]
